feat: Agrege Saludador por genero

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <label for="nombre-input">Nombre:</label>
     <input type="text" id="nombre-input" placeholder="Escribe tu nombre" />
     
+    <label for="genero-select">Género:</label>
+    <select id="genero-select">
+      <option value="">No especificar</option>
+      <option value="M">Masculino</option>
+      <option value="F">Femenino</option>
+    </select>
+
     <button id="saludar-button">Saludar</button>
     
     <div id="resultado-div"></div>
