--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <option value="M">Masculino</option>
       <option value="F">Femenino</option>
     </select>
-
+    <label for="Edad-numero">Edad:</label>
+      <input type="number" id="Edad-numero" />
     <button id="saludar-button">Saludar</button>
     
     <div id="resultado-div"></div>
