--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <option value="M">Masculino</option>
       <option value="F">Femenino</option>
     </select>
+    <label for="idioma-select">Idioma:</label>
+    <select id="idioma-select">
+      <option value="Esp">Español</option>
+      <option value="Ing">Ingles</option>
+    </select>
     <label for="Edad-numero">Edad:</label>
       <input type="number" id="Edad-numero" />
     <button id="saludar-button">Saludar</button>
